# opentelemetry-client

./: .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: python-app.yml
data/: presets.json
src/primes/: __init__.py  api_client.py  api_client_base.py  async_api_client.py  client.py  config.py  locustfile.py  settings.py  tasks.py  types.py
src/primes/api/: __init__.py  config.py  connection_manager.py  main.py  presets_store.py  test_executor.py  websockets.py
src/primes/api/routers/: distributions.py  plugins.py  presets.py  tests.py
src/primes/distributions/: README.md  __init__.py  base.py  constant.py  linear.py  loader.py  mix.py  poisson.py  registry.py  sequence.py  sine.py  step.py  utils.py  validation.py
tests/: distribution_test_utils.py  test_api_client.py  test_api_client_base.py  test_async_api_client.py  test_client.py  test_client_openapi_paths.py  test_constant_distribution.py  test_distribution_base_helpers.py  test_distribution_test_utils.py  test_distribution_utils.py  test_distributions_imports.py  test_linear_distribution.py  test_loader.py  test_mix_distribution.py  test_plugins_api.py  test_poisson_distribution.py  test_presets_router.py  test_presets_store.py  test_sequence_distribution.py  test_sine_distribution.py  test_step_distribution.py  test_tasks.py  test_test_executor.py  test_tests_api.py  test_tests_api_endpoints.py  test_ui_routes.py  test_websockets.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  main.tsx  styles.css
ui/src/__tests__/: App.test.tsx
