[project]
name = "primes-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attrs==25.3.0",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "idna==3.10",
    "importlib-metadata==8.7.0",
    "jsonschema==4.25.1",
    "jsonschema-path==0.3.4",
    "jsonschema-specifications==2025.9.1",
    "lazy-object-proxy==1.12.0",
    "httpx>=0.27.0",
    "locust>=2.43.0",
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.17",
    "mypy==1.17.1",
    "openapi-schema-validator==0.6.3",
    "openapi-spec-validator==0.7.2",
    "opentelemetry-api==1.36.0",
    "opentelemetry-distro==0.57b0",
    "opentelemetry-exporter-otlp-proto-grpc==1.36.0",
    "opentelemetry-instrumentation==0.57b0",
    "opentelemetry-instrumentation-asyncio==0.57b0",
    "opentelemetry-instrumentation-dbapi==0.57b0",
    "opentelemetry-instrumentation-logging==0.57b0",
    "opentelemetry-instrumentation-openai>=0.48.1",
    "opentelemetry-instrumentation-requests==0.57b0",
    "opentelemetry-instrumentation-sqlite3==0.57b0",
    "opentelemetry-instrumentation-threading==0.57b0",
    "opentelemetry-instrumentation-urllib==0.57b0",
    "opentelemetry-instrumentation-urllib3==0.57b0",
    "opentelemetry-instrumentation-wsgi==0.57b0",
    "opentelemetry-sdk==1.36.0",
    "opentelemetry-semantic-conventions==0.57b0",
    "opentelemetry-util-http==0.57b0",
    "packaging==25.0",
    "pathable==0.4.4",
    "pyyaml==6.0.2",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "referencing==0.36.2",
    "requests==2.32.5",
    "rfc3339-validator==0.1.4",
    "rpds-py==0.27.1",
    "six==1.17.0",
    "types-jsonschema==4.25.1.20250822",
    "types-pyyaml==6.0.12.20250822",
    "types-requests==2.32.4.20250809",
    "typing-extensions==4.15.0",
    "urllib3==2.5.0",
    "wrapt==1.17.3",
    "zipp==3.23.0",
    "complexipy>=5.2.0",
]

[project.scripts]
primes-client = "primes.client:main"

[project.entry-points."primes.distributions"]
constant = "primes.distributions.constant:ConstantDistribution"
linear = "primes.distributions.linear:LinearDistribution"
poisson = "primes.distributions.poisson:PoissonDistribution"
step = "primes.distributions.step:StepDistribution"
sine = "primes.distributions.sine:SineDistribution"
sequence = "primes.distributions.sequence:SequenceDistribution"
mix = "primes.distributions.mix:MixDistribution"

[tool.mypy]
mypy_path = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
fail_under = 75  # Require 75% coverage

[tool.coverage.html]
directory = "htmlcov"

[dependency-groups]
dev = [
    "basedpyright>=1.37.2",
]
